--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Carl Vondrick - MIT</title>
+<title>Jianzhe Lin - UCAS</title>
 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <style>
 @media screen and (max-device-width: 480px){
