--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ $(document).ready(function(){
     <div id="sidebar"><a href="me-big.html"><img src="me-bw.jpg" id="me" itemprop="photo"></a></div>
 
     <div id="bio">
-        <h1><span itemprop="name">Carl Vondrick</span></h1>
+        <h1><span itemprop="name">Jianzhe Lin</span></h1>
 
         <p style="line-height:23px;">Ph.D. Student<br>
         Massachusetts Institute of Technology<br>
