--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ $(document).ready(function(){
     <div id="slideshow">
 
 
-    <a><img src="flowchart3.pdf" class="codelogo"></a>
+    <a><img src="flowchart3.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><br>
     <span itemprop="description">An experiment to acquire salient bands<br>from the hyperspectral image.<br> This work is submitted to Transaction on geoscience and remote sensing, IEEE.</span>
     </p>
@@ -123,7 +123,7 @@ $(document).ready(function(){
     </div>
 
     
-    <a><img src="flowchart1.pdf" class="codelogo"></a>
+    <a><img src="flowchart1.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br>
     <span itemprop="description">A multi-task method based hyperspectral image classification method.<br> This work is submitted to Transaction on cybernetic.</span>
     </p>
@@ -137,13 +137,17 @@ $(document).ready(function(){
 
 <div class="container">
 <h2>Refereed Publications</h2>
+
     <div class="publication">
     <a href="icme2014.pdf"><img src="KNNComparison.eps" class="publogo"></a>
-    <p><strong><a href="icme2014.pdf">Assessing the Quality of Actions</a></strong><br>
+    <p><strong><a href="icme2014.pdf">IN DEFENSE OF ITERATED CONDITIONAL MODE FOR HYPERSPECTRAL IMAGE CLASSIFICATION</a></strong><br>
     Jianzhe Lin, Qi Wang, Yuan Yuan<br>
     <em>ICME 2014</em><br>
     <span class="links"><a href="quality.pdf">Paper</a> <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6890171">Code + Data</a></span>
+	</p>
+	</div>
     </div>
+	
 
  
 </div>
