--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ $(document).ready(function(){
 <h2>Refereed Publications</h2>
 
     <div class="publication">
-    <a href="icme2014.pdf"><img src="KNNComparison.eps" class="publogo"></a>
+    <a href="icme2014.pdf"><img src="KNNComparison.jpg" class="publogo"></a>
     <p><strong><a href="icme2014.pdf">IN DEFENSE OF ITERATED CONDITIONAL MODE FOR HYPERSPECTRAL IMAGE CLASSIFICATION</a></strong><br>
     Jianzhe Lin, Qi Wang, Yuan Yuan<br>
     <em>ICME 2014</em><br>
