--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(document).ready(function(){
     </div>
 
   <div class="code">  
-    <a><img src="flowchart2.jpg" class="codelogo"></a>
+    <a><img src="flowchart.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br>
     <span itemprop="description">Can the salient bands be highlighted<br>by mainfold ranking?<br> This work is submitted to Transaction on neural network, IEEE.</span>
     </p>
@@ -123,7 +123,7 @@ $(document).ready(function(){
     </div>
 
    <div class="code"> 
-    <a><img src="flowchart1.jpg" class="codelogo"></a>
+    <a><img src="flowchart2.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br>
     <span itemprop="description">A multi-task method based hyperspectral image classification method.<br> This work is submitted to Transaction on cybernetic.</span>
     </p>
@@ -139,7 +139,7 @@ $(document).ready(function(){
 <h2>Refereed Publications</h2>
 
     <div class="publication">
-    <a href="icme2014.pdf"><img src="KNNComparison.jpg" class="publogo"></a>
+    <a href="icme2014.pdf"><img src="comparison.jpg" class="publogo"></a>
     <p><strong><a href="icme2014.pdf">IN DEFENSE OF ITERATED CONDITIONAL MODE FOR HYPERSPECTRAL IMAGE CLASSIFICATION</a></strong><br>
     Jianzhe Lin, Qi Wang, Yuan Yuan<br>
     <em>ICME 2014</em><br>
