--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $(document).ready(function(){
 <body>
 
 <div class="title">
-    <div id="sidebar"><a href="me-big.html"><img src="me-bw.JPG" id="me" itemprop="photo"></a></div>
+    <div id="sidebar"><a><img src="me-bw.jpg" id="me" itemprop="photo"></a></div>
 
     <div id="bio">
         <h1><span itemprop="name">Jianzhe Lin</span></h1>
