--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $(document).ready(function(){
 <body>
 
 <div class="title">
-    <div id="sidebar"><a><img src="me-bw.jpg" id="me" itemprop="photo"></a></div>
+    <div id="sidebar"><a><img src="me-bw.JPG" id="me" itemprop="photo"></a></div>
 
     <div id="bio">
         <h1><span itemprop="name">Jianzhe Lin</span></h1>
@@ -143,7 +143,7 @@ $(document).ready(function(){
     <p><strong><a href="icme2014.pdf">IN DEFENSE OF ITERATED CONDITIONAL MODE FOR HYPERSPECTRAL IMAGE CLASSIFICATION</a></strong><br>
     Jianzhe Lin, Qi Wang, Yuan Yuan<br>
     <em>ICME 2014</em><br>
-    <span class="links"><a href="quality.pdf">Paper</a> <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6890171">Code + Data</a></span>
+    <span class="links"><a href="quality.pdf"></a> <a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=6890171">Paper</a></span>
 	</p>
 	</div>
     </div>
@@ -153,7 +153,7 @@ $(document).ready(function(){
 </div>
 
 <div class="container">
-    <h2>Technical Reports</h2>
+    <h2>Life in UCAS</h2>
 
     <div class="publication">
     <a href="imagination/paper.pdf"><img src="cihead.png" class="publogo"></a>
