--- a/index.html
+++ b/index.html
@@ -154,13 +154,9 @@ $(document).ready(function(){
 
 <div class="container">
     <h2>Life in UCAS</h2>
-
     <div class="publication">
-    <a href="imagination/paper.pdf"><img src="cihead.png" class="publogo"></a>
-    <p><strong><a href="imagination/paper.pdf">Acquiring Visual Classifiers from Human Imagination</a></strong><br>
-    Carl Vondrick, Hamed Pirsiavash, Aude Oliva, Antonio Torralba<br>
-    <em>arXiv 2014</em><br>
-    <span class="links"><a href="imagination/paper.pdf">Paper</a>  <a href="imagination/">Project Page</a> <a href="http://www.technologyreview.com/view/532231/random-image-experiment-reveals-the-building-blocks-of-human-imagination/">Technology Review</a> <a href="http://motherboard.vice.com/read/to-teach-computers-to-see-give-them-imaginations">Vice Magazine</a></span>
+    I am the monitor of our 2013 grade. In my sparetime, I would like play basketball with my classmate. guitar is also one of my favorite hobby. In our free time, we climbed mountain, went to yan'an, play basketball game with the staff. Our 2013 is with high cohesion of class.<br>
+    <a><img src="basketball.jpg" class="publogo"></a>
     </div>
 
     <div class="publication">
@@ -175,13 +171,9 @@ $(document).ready(function(){
 </div>
 
 <div class="container">
-    <h2>Thesis</h2>
+    <h2>My Blog</h2>
     <div class="publication">
-    <a href="mthesis.pdf"><img src="ihog.png" class="publogo"></a>
-    <p><strong><a href="mthesis.pdf">Visualizing Object Detection Features</a></strong><br>
-    Carl Vondrick<br>
-    <em>M.S. Thesis, MIT, 2013</em><br>
-    <span class="links"><a href="mthesis.pdf">Thesis</a> <a href="ihog/">Code</a></span>
+    <span class="links">  <a http://blog.csdn.net/jianzhelin">You can clink here to enter my CSDN blog.</a></span>
     </p>
     </div>
 </div>
