--- a/index.html
+++ b/index.html
@@ -155,17 +155,12 @@ $(document).ready(function(){
 <div class="container">
     <h2>Life in UCAS</h2>
     <div class="publication">
-    I am the monitor of our 2013 grade. In my sparetime, I would like play basketball with my classmate. guitar is also one of my favorite hobby. In our free time, we climbed mountain, went to yan'an, play basketball game with the staff. Our 2013 is with high cohesion of class.<br>
-    <a><img src="basketball.jpg" class="publogo"></a>
+     <a><img src="basketball.jpg" class="publogo"></a>
+    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball with my classmate. guitar is also one of my favorite hobby. In our free time, we climbed mountain, went to yan'an, play basketball game with the staff. Our 2013 is with high cohesion of class.</a></strong><br>
+    
+     </p>
     </div>
 
-    <div class="publication">
-    <a href="http://mit.edu/why/paper.pdf"><img src="http://mit.edu/why/why-logo.png" class="publogo" width="100" height="100"></a>
-    <p><strong><a href="http://mit.edu/why/paper.pdf">Inferring the Why in Images</a></strong><br>
-    Carl Vondrick*, Hamed Pirsiavash*, Antonio Torralba <small style="padding-left:20px;">*equal contribution</small><br>
-    <em>arXiv 2014</em><br>
-    <span class="links"><a href="http://mit.edu/why/paper.pdf">Paper</a>  <a href="http://mit.edu/why/">Project Page</a></span>
-    </div>
 
 
 </div>
@@ -173,7 +168,7 @@ $(document).ready(function(){
 <div class="container">
     <h2>My Blog</h2>
     <div class="publication">
-    <span class="links">  <a http://blog.csdn.net/jianzhelin">You can clink here to enter my CSDN blog.</a></span>
+    <span class="links">  <a href="http://blog.csdn.net/jianzhelin">You can clink here to enter my CSDN blog.</a></span>
     </p>
     </div>
 </div>
