--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ $(document).ready(function(){
 <div class="container">
     <h2>Life in UCAS</h2>
     <div class="publication">
-     <a><img src="basketball.jpg" class="publogo"></a>
-    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball with my classmate. guitar is also one of my favorite hobby. In our free time, we climbed mountain, went to yan'an, play basketball game with the staff. Our 2013 is with high cohesion of class.</a></strong><br>
+     <a><img src="basketball.jpg" class="codelogo"></a>
+    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball and travel with my classmate. guitar is also one of my favorite hobby.</a></strong><br>
     
      </p>
     </div>
