--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(document).ready(function(){
     <h2>About Me</h2>
     <p>I am now a postgraduate student majoring in computer science 
     student</span> at <a href="http://english.ucas.ac.cn/Pages/default.aspx">UCAS</a>. My research now focuses on hyperspectral image classification.
-    I am also interested in the algorithm about machine learning, computer vision and human computation. I believe that for today's modern computer age, which has given everyone is data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>
+    I am also interested in the algorithm about machine learning, computer vision and human computation. I believe that for today's modern computer age, which has given everyone data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>
 
     <p>
     I work at Center for OPTical IMagery Analysis and Learning (OPTIMAL) 
