--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ $(document).ready(function(){
 <div class="container">
     <h2>About Me</h2>
     <p>I am now a postgraduate student majoring in computer science 
-    student</span> at <a href="http://english.ucas.ac.cn/Pages/default.aspx">UCAS</a>. My research now focuses on hyperspectral image classification.
+    </span> at <a href="http://english.ucas.ac.cn/Pages/default.aspx">UCAS</a>. My research now focuses on hyperspectral image classification.
     I am also interested in the algorithm about machine learning, computer vision and human computation. I believe that for today's modern computer age, which has given everyone data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>
 
     <p>
@@ -156,7 +156,7 @@ $(document).ready(function(){
     <h2>Life in UCAS</h2>
     <div class="publication">
      <a><img src="basketball.jpg" class="codelogo"></a>
-    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball and travel with my classmates. guitar is also one of my favorite hobby.</a></strong><br>
+    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball and travel with my classmates. guitar is also one of my favorite.</a></strong><br>
     
      </p>
     </div>
