--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ $(document).ready(function(){
     <h2>Life in UCAS</h2>
     <div class="publication">
      <a><img src="basketball.jpg" class="codelogo"></a>
-    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like to play basketball and travel with my classmates. Guitar is also one of my favorite.</a></strong><br>
+    <p><strong><a>I am the monitor of our 2013 grade. In my sparetime, I would like play basketball and travel with my classmates. Guitar is also one of my favorite.</a></strong><br>
     
      </p>
     </div>
