--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ $(document).ready(function(){
 <div class="container">
     <h2>About Me</h2>
     <p>I am now a postgraduate student majoring in computer science 
-    </span> at <a href="http://english.ucas.ac.cn/Pages/default.aspx">UCAS</a>. My research now focuses on hyperspectral image classification.
+    </span> at <a href="http://english.ucas.ac.cn/Pages/default.aspx">UCAS</a>. My research now focuses on hyperspectral image classification and feature selection.
     I am also interested in the algorithm about machine learning, computer vision and human computation. I believe that for today's modern computer age, which has given everyone data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>
 
     <p>
     I work at Center for OPTical IMagery Analysis and Learning (OPTIMAL) 
     where I am advised by Porf. Yuan Yuan, senior member, IEEE and Xuelong Li, Fellow, IEEE.
-    Previously, I got my BE degree majoring in Optical Engineering in <a href="http://oei.hust.edu.cn/"> school of optical and electronic information, HUST</a> on July,1,2013. I received my second BA degree majoring in English in <a href="http://sfl.hust.edu.cn/"> school of Foreign languages, HUST</a> on July,1,2013 .
+    Previously, I got my BE degree majoring in Optical Engineering in <a href="http://oei.hust.edu.cn/"> school of optical and electronic information, Huazhong University of Science and Technology</a> on July,1,2013. I received my second BA degree majoring in English in <a href="http://sfl.hust.edu.cn/"> school of Foreign languages, Huazhong University of Science and Technology</a> on July,1,2013 .
     </p>
 
 </div>
@@ -109,7 +109,7 @@ $(document).ready(function(){
 <div class="code">
     <a><img src="flowchart3.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><br>
-    <span itemprop="description">An experiment to acquire salient bands<br>from the hyperspectral image.<br> This work is submitted to Transaction on geoscience and remote sensing, IEEE.</span>
+    <span itemprop="description">An experiment to acquire salient bands<br>from the hyperspectral image.</span>
     </p>
   
     </div>
@@ -117,7 +117,7 @@ $(document).ready(function(){
   <div class="code">  
     <a><img src="flowchart.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br>
-    <span itemprop="description">Can the salient bands be highlighted<br>by mainfold ranking?<br> This work is submitted to Transaction on neural network, IEEE.</span>
+    <span itemprop="description">Can the salient bands be highlighted<br>by mainfold ranking? </span>
     </p>
     
     </div>
@@ -125,7 +125,7 @@ $(document).ready(function(){
    <div class="code"> 
     <a><img src="flowchart2.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br>
-    <span itemprop="description">A multi-task method based hyperspectral image classification method.<br> This work is submitted to Transaction on cybernetic.</span>
+    <span itemprop="description">A multi-task method based hyperspectral image classification and feature selection method.</span>
     </p>
    
     </div>
@@ -153,6 +153,37 @@ $(document).ready(function(){
 </div>
 
 <div class="container">
+    <h2>Articles under review</h2>
+     <div class="publication">
+    <p><strong><Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
+    Yuan Yuan, Jianzhe Lin, Qi Wang <br>
+    <em>IEEE Trans. Cybernetic. under minor revision</em><br>
+ 
+	</p>
+	</div>
+	
+	     <div class="publication">
+    <p><strong><Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
+    Yuan Yuan, Jianzhe Lin, Qi Wang <br>
+    <em>IEEE Trans. Geoscience and Remote Sensing, under minor revision</em><br>
+ 
+	</p>
+	</div>
+	
+	     <div class="publication">
+    <p><strong><Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
+    Qi Wang, Jianzhe Lin, Yuan Yuan<br>
+    <em>IEEE Trans. Neural Networks and Learning Systems. under minor revision</em><br>
+ 
+	</p>
+	</div>
+	
+</div>
+
+
+
+
+<div class="container">
     <h2>Life in UCAS</h2>
     <div class="publication">
      <a><img src="basketball.jpg" class="codelogo"></a>
@@ -160,20 +191,12 @@ $(document).ready(function(){
     
      </p>
     </div>
-
-
-
-</div>
-
-<div class="container">
-    <h2>My Blog</h2>
-    <div class="publication">
-    <span class="links">  <a href="http://blog.csdn.net/jianzhelin">You can clink here to enter my CSDN blog.</a></span>
-    </p>
-    </div>
-</div>
-
+	
 <p style="text-align:center;font-size:16px;padding-top:20px; width : 400px; margin:0 auto; padding-bottom:25px; color :#fff;">I'm normally not a praying man, but if you're up there, please save me, Superman. &mdash; Homer Simpson</p>
 
 </body>
 </html>
+
+</div>
+
+
