--- a/index.html
+++ b/index.html
@@ -152,26 +152,24 @@ $(document).ready(function(){
  
 </div>
 
-<div class="container">
+<div class="">
     <h2>Articles under review</h2>
      <div class="publication">
-    <p><strong><Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
+    <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
     <em>IEEE Trans. Cybernetic. under minor revision</em><br>
- 
 	</p>
 	</div>
 	
-	     <div class="publication">
-    <p><strong><Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
+	     <div class="">
+    <p><strong>Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
     <em>IEEE Trans. Geoscience and Remote Sensing, under minor revision</em><br>
- 
 	</p>
 	</div>
 	
-	     <div class="publication">
-    <p><strong><Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
+	     <div class="">
+    <p><strong>Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
     Qi Wang, Jianzhe Lin, Yuan Yuan<br>
     <em>IEEE Trans. Neural Networks and Learning Systems. under minor revision</em><br>
  
@@ -191,7 +189,8 @@ $(document).ready(function(){
     
      </p>
     </div>
-	
+</div>
+
 <p style="text-align:center;font-size:16px;padding-top:20px; width : 400px; margin:0 auto; padding-bottom:25px; color :#fff;">I'm normally not a praying man, but if you're up there, please save me, Superman. &mdash; Homer Simpson</p>
 
 </body>
