--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ $(document).ready(function(){
  
 </div>
 
-<div class="">
+<div class="container">
     <h2>Articles under review</h2>
      <div class="publication">
     <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
@@ -161,14 +161,14 @@ $(document).ready(function(){
 	</p>
 	</div>
 	
-	     <div class="">
+	     <div class="publication">
     <p><strong>Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
     <em>IEEE Trans. Geoscience and Remote Sensing, under minor revision</em><br>
 	</p>
 	</div>
 	
-	     <div class="">
+	     <div class="publication">
     <p><strong>Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
     Qi Wang, Jianzhe Lin, Yuan Yuan<br>
     <em>IEEE Trans. Neural Networks and Learning Systems. under minor revision</em><br>
