--- a/index.html
+++ b/index.html
@@ -154,21 +154,21 @@ $(document).ready(function(){
 
 <div class="container">
     <h2>Articles under review</h2>
-     <div class="publication">
+     <div class="">
     <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
     <em>IEEE Trans. Cybernetic. under minor revision</em><br>
 	</p>
 	</div>
 	
-	     <div class="publication">
+	     <div class="">
     <p><strong>Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
     <em>IEEE Trans. Geoscience and Remote Sensing, under minor revision</em><br>
 	</p>
 	</div>
 	
-	     <div class="publication">
+	     <div class="">
     <p><strong>Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
     Qi Wang, Jianzhe Lin, Yuan Yuan<br>
     <em>IEEE Trans. Neural Networks and Learning Systems. under minor revision</em><br>
