--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ $(document).ready(function(){
 </div>
 
 <div class="container">
-    <h2>Articles under review</h2>
+    <h2>Articles Under Review</h2>
      <div class="">
     <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
