--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $(document).ready(function(){
     <p>
     I work at Center for OPTical IMagery Analysis and Learning (OPTIMAL) 
     where I am advised by Porf. Yuan Yuan, senior member, IEEE and Xuelong Li, Fellow, IEEE.
-    Previously, I got my BE degree majoring in Optical Engineering in <a href="http://oei.hust.edu.cn/"> school of optical and electronic information, Huazhong University of Science and Technology</a> on July,1,2013. I received my second BA degree majoring in English in <a href="http://sfl.hust.edu.cn/"> school of Foreign languages, Huazhong University of Science and Technology</a> on July,1,2013 .
+    Previously, I got my BE degree majoring in Optical Engineering in <a href="http://oei.hust.edu.cn/"> school of optical and electronic information, HUST</a> on July,1,2013. I received my second BA degree majoring in English in <a href="http://sfl.hust.edu.cn/"> school of Foreign languages, HUST</a> on July,1,2013 .
     </p>
 
 </div>
@@ -157,21 +157,21 @@ $(document).ready(function(){
      <div class="">
     <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
-    <em>IEEE Trans. Cybernetic. under minor revision</em><br>
+    <em>IEEE Trans. Cybernetic.</em> under minor revision<br>
 	</p>
 	</div>
 	
 	     <div class="">
     <p><strong>Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
     Yuan Yuan, Jianzhe Lin, Qi Wang <br>
-    <em>IEEE Trans. Geoscience and Remote Sensing, under minor revision</em><br>
+    <em>IEEE Trans. Geoscience and Remote Sensing.</em> under minor revision<br>
 	</p>
 	</div>
 	
 	     <div class="">
     <p><strong>Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
     Qi Wang, Jianzhe Lin, Yuan Yuan<br>
-    <em>IEEE Trans. Neural Networks and Learning Systems. under minor revision</em><br>
+    <em>IEEE Trans. Neural Networks and Learning Systems.</em> under minor revision<br>
  
 	</p>
 	</div>
