--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $(document).ready(function(){
 
     <p>
     I work at Center for OPTical IMagery Analysis and Learning (OPTIMAL) 
-    where I am advised by Porf. Yuan Yuan, senior member, IEEE and Xuelong Li, Fellow, IEEE.
+    where I am advised by Porf. Yuan Yuan, senior member, IEEE, Prof. Qi Wang, member, IEEE, and Xuelong Li, Fellow, IEEE.
     Previously, I got my BE degree majoring in Optical Engineering in <a href="http://oei.hust.edu.cn/"> school of optical and electronic information, HUST</a> on July,1,2013. I received my second BA degree majoring in English in <a href="http://sfl.hust.edu.cn/"> school of Foreign languages, HUST</a> on July,1,2013 .
     </p>
 
