--- a/index.html
+++ b/index.html
@@ -155,25 +155,11 @@ $(document).ready(function(){
 <div class="container">
     <h2>Articles Under Review</h2>
      <div class="">
-    <p><strong>Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</strong><br>
-    Yuan Yuan, Jianzhe Lin, Qi Wang <br>
-    <em>IEEE Trans. Cybernetic.</em> under minor revision<br>
+    <p><strong>Three papers are under review. I will update them in the recent future.</strong><br>
 	</p>
 	</div>
 	
-	     <div class="">
-    <p><strong>Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</strong><br>
-    Yuan Yuan, Jianzhe Lin, Qi Wang <br>
-    <em>IEEE Trans. Geoscience and Remote Sensing.</em> under minor revision<br>
-	</p>
-	</div>
 	
-	     <div class="">
-    <p><strong>Salient Band Selection for Hyperspectral Image Classification via Mainfold Ranking</strong><br>
-    Qi Wang, Jianzhe Lin, Yuan Yuan<br>
-    <em>IEEE Trans. Neural Networks and Learning Systems.</em> under minor revision<br>
- 
-	</p>
 	</div>
 	
 </div>
