--- a/index.html
+++ b/index.html
@@ -101,23 +101,17 @@ $(document).ready(function(){
  <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Education</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
-		<td class="STYLE11" width="180">•	Master of Science (July 2016)</td>
-		<td class="STYLE12" width="180">	Major in Signal and Information Processing; GPA: 3.44/4.00</td>
-	</tr>
-	<tr>
-	<td class="STYLE11"><a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences</a> | Xi’an, China | Sep. 2013-June 2016</td>
+		<td class="STYLE11" width="180">•	Sep. 2013-June 2016</td>
+		<td class="STYLE12" width="180">M.S., Computer Science,<a href="http://english.ucas.ac.cn/Pages/default.aspx">University of Chinese Academy of Sciences GPA: 3.44/4.00 </a> </td>
 	</tr>
 	<tr>
 	<td class="STYLE11">supervisor: Porf. Yuan Yuan, senior member, IEEE, <a href ="http://crabwq.github.io/">Qi Wang</a>, member, IEEE, and Xuelong Li, Fellow, IEEE.
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180">•	Bachelor of Engineering & Bachelor of Arts (June 2013)</td>
-		<td class="STYLE12">Major in Optoelectronic Information Engineering; GPA: 3.57/4.00 Second Major in English;</td>
+		<td class="STYLE11" width="180">•	Sep. 2009-June 2013</td>
+		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00; B.A., English,<a href="http://oei.hust.edu.cn/"> Huazhong University of Science and Technology</a> ;</td>
 	</tr>
 	
-	<tr>
-	<td class="STYLE11"><a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> | Wuhan, China | Sep. 2009-June 2013</td>
-	</tr>
 </table>   
 	
 	
