--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img border="0" src="img/pic.jpg"></font></td>
+		<img src="me-bw.jpg" id="me" itemprop="photo"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
@@ -83,13 +83,21 @@
 		<td class="STYLE17">Neural perception modeling, including visual saliency detection, color difference perception, etc.</td>
 	</tr>
 </table>
-    
-<div class="container">
-<h2>Highlighted Projects</h2>
-    <div id="slideshow-container">
-    <div id="slideshow">
 
-<div class="code">
+ <div class="container">
+ 
+<h2>Highlighted Projects</h2>
+
+    <div class="publication">
+    <a><img src="comparison.jpg" class="publogo"></a>
+    <p><strong><a href="icme2014.pdf"></a></strong><br>
+    <p><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br>
+    <span itemprop="description">An attempt to improve the<br>ICM method.</span>
+	</p>
+	</div>
+    </div>
+	
+	<div class="pubulication">
     <a><img src="flowchart3.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><br>
     <span itemprop="description">An experiment to acquire salient bands<br>from the hyperspectral image.</span>
@@ -97,7 +105,7 @@
   
     </div>
 
-  <div class="code">  
+  <div class="pubilication">  
     <a><img src="flowchart.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br>
     <span itemprop="description">Can the salient bands be highlighted<br>by mainfold ranking? </span>
@@ -105,7 +113,7 @@
     
     </div>
 
-   <div class="code"> 
+   <div class="pubulication"> 
     <a><img src="flowchart2.jpg" class="codelogo"></a>
     <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br>
     <span itemprop="description">A multi-task method based hyperspectral image classification and feature selection method.</span>
@@ -113,10 +121,9 @@
    
     </div>
 
-  
-    </div>
-    </div>
-</div>
+ 
+</div>   
+
 	
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
@@ -157,12 +164,6 @@
 
 	</table>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
-
-
-<h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Professional Activities</span></h2>
-<p class="STYLE11"><b>Editor Board:</b></p>
-	<p class="STYLE14">•	Neurocomputing (Elsevier)，Associate Editor</p>
-        <p class="STYLE14">•	Big Data Analytics (Bio-Med Central / Springer)，Associate Editor</p>
 
 <p class="STYLE11"><b>Membership:</b></p>
 	<p class="STYLE14">•	IEEE Student Member</p>
