--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Qi Wang's Homepage-Northwestern Polytechnical University</title>
+<title>JianzheLin's Homepage-UCAS</title>
 
 <link rel="stylesheet" href="site.css">
 <meta name="description" content="Qi WANG&#39;s webpage">
@@ -59,8 +59,7 @@
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2005-07/2010</td>
-		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00;</td>
-		<td class="STYLE12">B.A., English,<a href="http://oei.hust.edu.cn/"> Huazhong University of Science and Technology</td>
+		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00; B.A., English,Huazhong University of Science and Technology</td>
 	</tr>
 </table>   
         
@@ -84,9 +83,20 @@
 	</tr>
 </table>
 
+ <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
+<table border="0" width="900" id="table2" >
+	<tr>
+		<td class="STYLE11" width="180"><a><img src="comparison.jpg" class="publogo"></a></td>
+		<td class="STYLE12"> ><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the<br>ICM method.</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="180">•	2015-09-03</td>
+		<td class="STYLE12">A paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction onNeural Networks and Learning Systems (IEEE)</em></a></td>
+	</tr>
+</table>
  <div class="container">
  
-<h2>Highlighted Projects</h2>
+<h2></h2>
 
     <div class="publication">
     <a><img src="comparison.jpg" class="publogo"></a>
