--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180">•	09/2005-07/2010</td>
-		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00; B.A., English,Huazhong University of Science and Technology</td>
+		<td class="STYLE12">B.S., Optoelectronic Information Engineering,<a href="http://oei.hust.edu.cn/">Huazhong University of Science and Technology</a> GPA: 3.57/4.00;<br> B.A., English,Huazhong University of Science and Technology</td>
 	</tr>
 </table>   
         
@@ -83,58 +83,6 @@
 	</tr>
 </table>
 
- <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
-<table border="0" width="900" id="table2" >
-	<tr>
-		<td class="STYLE11" width="180"><a><img src="comparison.jpg" class="publogo"></a></td>
-		<td class="STYLE12"> ><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the<br>ICM method.</span></td>
-	</tr>
-	<tr>
-		<td class="STYLE11" width="180">•	2015-09-03</td>
-		<td class="STYLE12">A paper "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385"><em>IEEE Transaction onNeural Networks and Learning Systems (IEEE)</em></a></td>
-	</tr>
-</table>
- <div class="container">
- 
-<h2></h2>
-
-    <div class="publication">
-    <a><img src="comparison.jpg" class="publogo"></a>
-    <p><strong><a href="icme2014.pdf"></a></strong><br>
-    <p><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br>
-    <span itemprop="description">An attempt to improve the<br>ICM method.</span>
-	</p>
-	</div>
-    </div>
-	
-	<div class="pubulication">
-    <a><img src="flowchart3.jpg" class="codelogo"></a>
-    <p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><br>
-    <span itemprop="description">An experiment to acquire salient bands<br>from the hyperspectral image.</span>
-    </p>
-  
-    </div>
-
-  <div class="pubilication">  
-    <a><img src="flowchart.jpg" class="codelogo"></a>
-    <p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br>
-    <span itemprop="description">Can the salient bands be highlighted<br>by mainfold ranking? </span>
-    </p>
-    
-    </div>
-
-   <div class="pubulication"> 
-    <a><img src="flowchart2.jpg" class="codelogo"></a>
-    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br>
-    <span itemprop="description">A multi-task method based hyperspectral image classification and feature selection method.</span>
-    </p>
-   
-    </div>
-
- 
-</div>   
-
-	
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
 	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> accepted, 2015.</li>
@@ -152,6 +100,30 @@
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
+ <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Highlighted Projects</span></h2>
+<table border="0" width="900" id="table2" >
+<ol style="margin-left:2em">
+	<tr>
+		<td class="STYLE11" width="180"><a><img src="comparison.jpg" class="publogo"></a></td>
+		<td class="STYLE12"> ><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="180"><a><img src="flowchart3.jpg" class="codelogo"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><span itemprop="description">An experiment to acquire salient bands from the hyperspectral image.</span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="180"><a><img src="flowchart.jpg" class="codelogo"></a></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
+	</tr>
+	<tr>
+		<td class="STYLE11" width="180"><a><img src="flowchart2.jpg" class="codelogo"></a></td>
+		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A multi-task method based hyperspectral image classification and feature selection method.</span></td>
+	</tr>
+</ol>
+<p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>	
+</table>
+
+ 
 
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
