--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 <ol style="margin-left:2em">
 	<tr>
 		<td class="STYLE11" width="180"><a><img src="comparison.jpg" class="publogo"></a></td>
-		<td class="STYLE12"> ><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
+		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180"><a><img src="flowchart3.jpg" class="codelogo"></a></td>
-		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a></strong><span itemprop="description">An experiment to acquire salient bands from the hyperspectral image.</span></td>
+		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a><br></strong><span itemprop="description">An experiment to acquire salient bands from the hyperspectral image.</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11" width="180"><a><img src="flowchart.jpg" class="codelogo"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180"><a><img src="flowchart2.jpg" class="codelogo"></a></td>
-		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A multi-task method based hyperspectral image classification and feature selection method.</span></td>
+		<td class="STYLE11" width="180"><a><img src="flowchart1.jpg" class="codelogo"></a></td>
+		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A multi-task method based hyperspectral image classification and feature selection.</span></td>
 	</tr>
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>	
