--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img src="me-bw.jpg" id="me" itemprop="photo"></font></td>
+		<img src="meme.jpg" id="me" itemprop="photo"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
@@ -104,19 +104,19 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-		<td class="STYLE11" width="180"><a><img src="comparison.jpg" class="publogo"></a></td>
+		<td class="STYLE11"><a><img src="chart1.jpg" class="publogo" width="256" height="128"></a></td>
 		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180"><a><img src="flowchart3.jpg" class="codelogo"></a></td>
+		<td class="STYLE11"><a><img src="chart3.jpg" class="codelogo" width="256" height="128"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a><br></strong><span itemprop="description">An experiment to acquire salient bands from the hyperspectral image.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180"><a><img src="flowchart.jpg" class="codelogo"></a></td>
+		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="128"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11" width="180"><a><img src="flowchart1.jpg" class="codelogo"></a></td>
+		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="128"></a></td>
 		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A multi-task method based hyperspectral image classification and feature selection.</span></td>
 	</tr>
 </ol>
