--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<td width="200">
 		<p align="center">
 		<font face="Arial">
-		<img src="meme.jpg" id="me" itemprop="photo"></font></td>
+		<img src="meme.jpg" id="me" itemprop="photo" width="96" height="192"></font></td>
 		<td ><b> <span class="STYLE7">Jianzhe Lin</span><span lang="zh-cn"  class="STYLE8"> 林健哲</span></b>
 		  <p style="padding-top:1em;padding-bottom:0em"><span class="STYLE9">Master Student</span></p>
 		  <p style="padding-top:0em;padding-bottom:0em"><span class="STYLE9">Center for OPTical IMagery Analysis and Learning (OPTIMAL)</span></p>
@@ -85,10 +85,10 @@
 
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Publications</span></h2>
 <ol style="margin-left:2em">    
-	<li class="STYLE13">Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13">Q. Wang, <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13">Y. Yuan, <b>J. Lin<font size="2">*</font></b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> accepted, 2015.</li>
-	<li class="STYLE13"><b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.<a href="icme2014.pdf"> [PDF] </a></li>	
+	<li class="STYLE14">[j3] Y. Yuan, <b>J. Lin</b>, and Q. Wang, "Dual Clustering Based Hyperspectral Band Selection by  Contextual Analysis," <i>IEEE Transactions on Geoscience and Remote Sensing (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE14">[j2] Q. Wang, <b>J. Lin</b>, and Y. Yuan, "Salient Band Selection for Hyperspectral Image Classification via Manifold Ranking," <i>IEEE Transactions on Neural Networks and Learning Systems (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE14">[j1] Y. Yuan, <b>J. Lin</b>, and Q. Wang, “Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization,” <i>IEEE Transactions on Cybernetics (IEEE),</i> accepted, 2015.</li>
+	<li class="STYLE14">[c1] <b>J. Lin</b>, Q. Wang, and Y. Yuan, “In Defense of Iterated Conditional Mode for Hyperspectral Image Classification,” <i>IEEE International Conference on Multimedia and Expo (IEEE),</i> pp. 1-6, 2014.<a href="icme2014.pdf"> [PDF] </a></li>	
 </ol>
 <p style="text-align:right;">[<a href="#top" target="_self" ><span style="font-family: Palatino Linotype">↑TOP</span></a>]</p>
 
@@ -104,19 +104,19 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-		<td class="STYLE11"><a><img src="chart1.jpg" class="publogo" width="256" height="128"></a></td>
+		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="192"></a></td>
 		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="chart3.jpg" class="codelogo" width="256" height="128"></a></td>
+		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="64"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a><br></strong><span itemprop="description">An experiment to acquire salient bands from the hyperspectral image.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="128"></a></td>
+		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="64"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="128"></a></td>
+		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="64"></a></td>
 		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A multi-task method based hyperspectral image classification and feature selection.</span></td>
 	</tr>
 </ol>
