--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
  <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">News</span></h2>
 <table border="0" width="900" id="table2" >
 	<tr>
+		<td class="STYLE11" width="180">•	09/2015-07/2016</td>
+		<td class="STYLE12"> <b>I'm looking for a PH.D opportunity</b></td>
+	</tr>
+	<tr>
 		<td class="STYLE11" width="180">•	2015-09-17</td>
 		<td class="STYLE12"> A paper "Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis" is newly accepted by <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?reload=true&punumber=36"><em>IEEE Transaction on Geoscience and Remote Sensing (IEEE)</em></a></td>
 	</tr>
@@ -104,8 +108,7 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="512" height="128"></a></td>
-		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
+		<td class="STYLE11"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="512" height="128"></a></td>
