--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-		<td class="STYLE11"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
+	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="256" height="64"></a></td>
+		<td class="STYLE12"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
 	</tr>
 	<tr>
 		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="64"></a></td>
@@ -172,13 +173,13 @@
         </div><!-- end container -->
     </div><!-- end main-wrap -->
 
-<p style="text-align:center;font-size:16px;padding-top:20px; width : 400px; margin:0 auto; padding-bottom:25px; color :#0ff;">I believe in today's modern computer age, which has given everyone data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>	
+<p style="text-align:center;font-size:16px;padding-top:20px; width : 400px; margin:0 auto; padding-bottom:25px; color :#9f5f9f;">I believe in today's modern computer age, which has given everyone data, lots and lots of data, building intelligent system for data processing combining knowledge from human with machine is with crucial significance.</p>	
 
 <div id="footer-wrap">
     <div  class="container" align="center">
-    <p><span id="idTestJson" style="color:#0ff;font-size: 14pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Last updated: September 2015 </span></p>
-	<p><span id="counter" style="color:#EEE;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> Hit Counter: </span><a href="http://www.easycounter.com/"><img src="http://www.easycounter.com/counter.php?crabwq" border="0" alt="Free Hit Counter"></a>
-	<span id="counter" style="color:#0ff;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Since July 2015</span></p>
+    <p><span id="idTestJson" style="color:#a67d3d;font-size: 14pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Last updated: September 2015 </span></p>
+	<p><span id="counter" style="color:#a67d3d;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;"> Hit Counter: </span><a href="http://www.easycounter.com/"><img src="http://www.easycounter.com/counter.php?crabwq" border="0" alt="Free Hit Counter"></a>
+	<span id="counter" style="color:#a67d3d;font-size: 12pt;font-family: "Palatino Linotype","Book Antiqua",Palatino,serif;">Since July 2015</span></p>
     </div>
 </div><!-- end footer-wrap -->
 
