--- a/index.html
+++ b/index.html
@@ -108,23 +108,23 @@
 <table border="0" width="900" id="table2" >
 <ol style="margin-left:2em">
 	<tr>
-	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="256" height="64"></a></td>
+	    <td class="STYLE11"><a><img src="chart4.jpg" class="publogo" width="192" height="96"></a></td>
 		<td class="STYLE12"><strong><a itemprop="name">Theory and Application for Precision Processing and Intelligent Spatial Information Transformation of High Resolution Remote Sensing Satellite Data</a></strong><br><span itemprop="description">Key Project of Chinese National Programs for Fundamental Research and Development, Team leader.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="64"></a></td>
-		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">An attempt to improve the ICM method.</span></td>
+		<td class="STYLE11"><a><img src="chart3.jpg" class="publogo" width="256" height="128"></a></td>
+		<td class="STYLE12"><strong><a itemprop="name">In defense of Iterated Conditional Modes method</a></strong><br><span itemprop="description">Mainly focus on the Markov Random Fields related paradigm, which involves a demanding energy minimization procedure.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="64"></a></td>
+		<td class="STYLE11"><a><img src="chart2.jpg" class="codelogo" width="256" height="96"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Dual Clustering Based Hyperspectral Band Selection by Contextual Analysis</a><br></strong><span itemprop="description">Have tackled the inherent drawbacks of clustering based band selection method through a new framework concerning on dual clustering;.</span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="64"></a></td>
+		<td class="STYLE11"><a><img src="flowchart.jpg" class="codelogo" width="256" height="96"></a></td>
 		<td class="STYLE12"><p><strong><a itemprop="name">Band selection by mainfold ranking</a></strong><br><span itemprop="description">Can the salient bands be highlighted by mainfold ranking? </span></td>
 	</tr>
 	<tr>
-		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="64"></a></td>
+		<td class="STYLE11"><a><img src="chart1.jpg" class="codelogo" width="256" height="96"></a></td>
 		<td class="STYLE12">    <p><strong><a itemprop="name">Hyperspectral Image Classification via Multi-Task Joint Sparse Representation and Stepwise MRF Optimization</a></strong><br><span itemprop="description">A novel spectral-spatial classification scheme is proposed; mainly focuses on multi-task joint sparse representation and a stepwise markov random filed framework.</span></td>
 	</tr>
 </ol>
@@ -136,7 +136,7 @@
 <h2 style="text-align:left; padding-top:20px;"><span class="STYLE10">Honors and Certificates</span></h2>
 	<table border="0" width="900" id="table2" >
 		<tr>
-			<td class="STYLE11" width="180">•	2013</td>
+			<td class="STYLE11" width="180">•	2013</td·
 			<td class="STYLE12">Individual Scholarship</td>
 		</tr>		
 		<tr>
